objects/Ann1__c.object
<CustomObject>
    <fields>
        <fullName>Id__c</fullName>
        <label>Id</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>12</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Noofrecords__c</fullName>
        <label>Noofrecords</label>
        <summaryForeignKey>Sindu__c.Ann1__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Ann1</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Id__c</columns>
        <columns>Location__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Ann1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ann1s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>